Increase horizontal spacing on large buttons

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -48,6 +48,7 @@ $tc-width--switch-track: 40px;
 // ### Spacings
 $tc-spacing--actions: 10px;
 $tc-spacing--button: 15px;
+$tc-spacing--button-large: 20px;
 $tc-spacing--container: 25px;
 $tc-spacing--container-small: 20px;
 $tc-spacing--container-large: 50px;
