Refactor TcSelect & upgrade dependencies

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -13,6 +13,7 @@ $tc-color--white: #fff;
 
 // ### Brands
 $tc-color--studio: #2a66a1;
+$tc-color--studio-faded: rgba($tc-color--studio, 0.15);
 $tc-color--toucan: #a0d1c5;
 
 // ### Customizable
